--- a/MenuSchnitzel.html
+++ b/MenuSchnitzel.html
@@ -3,163 +3,87 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Menu Schnitzel Jerman</title>
+  <title>Menu Schnitzel</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-        font-family: 'Montserrat', Arial, sans-serif;
-        background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
-        margin: 0;
-        padding: 0;
-    }
-    .navbar {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-    .nav-link, .navbar-brand {
-        color: #fff;
-        font-weight: 500;
-        letter-spacing: 1px;
-    }
-    .nav-link:hover {
-        background-color: rgba(255, 255, 255, 0.15);
-        border-radius: 5px;
-        transition: 0.3s;
-    }
-    .nav-item.dropdown:hover .dropdown-menu {
-        display: block;
-        margin-top: 0;
-    }
-    .dropdown-menu {
-        background-color: rgba(0, 0, 0, 0.5);
-        border: none;
-    }
-    .dropdown-item {
-        color: white;
-    }
-    .dropdown-item:hover {
-        background-color: rgba(255, 255, 255, 0.2);
-        color: white;
-    }
-    .schnitzel-section {
-        padding: 60px 20px;
-    }
-    .schnitzel-card {
-        border-radius: 12px;
-        box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-        margin-top: 40px;
-        margin-bottom: 80px;
-        overflow: hidden;
-    }
-    .schnitzel-card img {
-        height: 400px;
-        object-fit: cover;
-        width: 100%;
-    }
-    .schnitzel-image {
-        scroll-margin-top: 100px;
-    }
-    .schnitzel-content {
-        padding: 30px;
-    }
-    h2 {
-        margin-bottom: 30px;
-        font-weight: bold;
-        text-align: center;
-    }
-    footer {
-        background-color: black;
-        color: white;
-        padding: 20px 0;
-        text-align: center;
-    }
-    @media (min-width: 768px) {
-        .schnitzel-row {
-          display: flex;
-          align-items: center;
-        }
-        .schnitzel-row:nth-child(even) .schnitzel-image {
-          order: 2;
-        }
-    }
-  </style>
+  <link rel="stylesheet" href="css/menuschnitzel.css">
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
+  <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
     <div class="container-fluid px-4">
-        <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+      <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
         <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
-                    <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
-                    <li><a class="dropdown-item" href="brot.html">Brot</a></li>
-                </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
-                <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="Sosis.html">Wurst</a></li>
+              <li><a class="dropdown-item" href="Schnitzel.html">Schnitzel</a></li>
+              <li><a class="dropdown-item" href="brot.html">Brot</a></li>
             </ul>
-        </div>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
+          <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+        </ul>
+      </div>
     </div>
-</nav>
-
-<div class="container schnitzel-section">
+  </nav>
+  
+  <div class="container schnitzel-section">
     <h2>Menu schnitzel Terkenal di Jerman</h2>
 
-    <div class="schnitzel-card schnitzel-row">
-        <div class="col-md-6 schnitzel-image" id="wienerschnitzel">
-            <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
-        </div>
-        <div class="col-md-6 schnitzel-content">
-            <h4>Wiener Schnitzel</h4>
-            <p>schnitzel khas Jerman yang biasanya dipanggang dan disajikan dengan roti atau sauerkraut. Berasal dari Nürnberg, Bratwurst memiliki rasa gurih dan aroma rempah yang khas. Cocok disantap dengan mustard pedas!</p>
-        </div>
+    <div class="schnitzel-card schnitzel-row fade-in">
+      <div class="col-md-6 schnitzel-image" id="wienerschnitzel">
+        <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
+      </div>
+      <div class="col-md-6 schnitzel-content">
+        <h4>Wiener Schnitzel</h4>
+        <p>schnitzel khas Jerman yang biasanya dipanggang dan disajikan dengan roti atau sauerkraut. Berasal dari Nürnberg, Bratwurst memiliki rasa gurih dan aroma rempah yang khas. Cocok disantap dengan mustard pedas!</p>
+      </div>
     </div>
 
-    <div class="schnitzel-card schnitzel-row">
-        <div class="col-md-6 schnitzel-image" id="chickenschnitzel">
-            <img src="img/Chicken Schnitzel.jpg" alt="chickenschnitzel">
-        </div>
-        <div class="col-md-6 schnitzel-content">
-            <h4>Chicken Schnitzel</h4>
-            <p>schnitzel potong yang disiram saus tomat pedas bercampur bubuk kari. Hidangan street food yang sangat populer di Berlin dan sekitarnya. Rasanya unik dan menggoda, cocok untuk pencinta rasa berani!</p>
-        </div>
+    <div class="schnitzel-card schnitzel-row fade-in">
+      <div class="col-md-6 schnitzel-image" id="chickenschnitzel">
+        <img src="img/Chicken Schnitzel.jpg" alt="chickenschnitzel">
+      </div>
+      <div class="col-md-6 schnitzel-content">
+        <h4>Chicken Schnitzel</h4>
+        <p>schnitzel potong yang disiram saus tomat pedas bercampur bubuk kari. Hidangan street food yang sangat populer di Berlin dan sekitarnya. Rasanya unik dan menggoda, cocok untuk pencinta rasa berani!</p>
+      </div>
     </div>
 
-    <div class="schnitzel-card schnitzel-row">
-        <div class="col-md-6 schnitzel-image" id="turkeyschnitzel">
-            <img src="img/Turkey Schnitzel.jpg" alt="turkeyschnitzel">
-        </div>
-        <div class="col-md-6 schnitzel-content">
-            <h4>Turkey Schnitzel</h4>
-            <p>schnitzel putih khas Bavaria, biasanya terbuat dari daging sapi muda dan bumbu segar seperti peterseli. Weisswurst direbus dan disajikan bersama pretzel dan mustard manis. Biasanya dinikmati saat sarapan atau brunch.</p>
-        </div>
+    <div class="schnitzel-card schnitzel-row fade-in">
+      <div class="col-md-6 schnitzel-image" id="turkeyschnitzel">
+        <img src="img/Turkey Schnitzel.jpg" alt="turkeyschnitzel">
+      </div>
+      <div class="col-md-6 schnitzel-content">
+        <h4>Turkey Schnitzel</h4>
+        <p>schnitzel putih khas Bavaria, biasanya terbuat dari daging sapi muda dan bumbu segar seperti peterseli. Weisswurst direbus dan disajikan bersama pretzel dan mustard manis. Biasanya dinikmati saat sarapan atau brunch.</p>
+      </div>
     </div>
-
-    <div class="schnitzel-card schnitzel-row">
-        <div class="col-md-6 schnitzel-image" id="beefschnitzel">
-            <img src="img/Beef Schnitzel.jpg" alt="beefschnitzel">
-        </div>
-        <div class="col-md-6 schnitzel-content">
-            <h4>Beef Schnitzel</h4>
-            <p>schnitzel ini biasanya dibuat dari campuran daging sapi dan babi, dibumbui dengan garam, lada putih, dan rempah-rempah seperti peterseli atau daun bawang. Bockwurst direbus dan sering disajikan dengan roti dan mustard. Cocok disantap bersama bir tradisional Jerman, terutama saat musim semi atau festival rakyat.</p>
-        </div>
+    
+    <div class="schnitzel-card schnitzel-row fade-in">
+      <div class="col-md-6 schnitzel-image" id="beefschnitzel">
+        <img src="img/Beef Schnitzel.jpg" alt="beefschnitzel">
+      </div>
+      <div class="col-md-6 schnitzel-content">
+        <h4>Beef Schnitzel</h4>
+        <p>schnitzel ini biasanya dibuat dari campuran daging sapi dan babi, dibumbui dengan garam, lada putih, dan rempah-rempah seperti peterseli atau daun bawang. Bockwurst direbus dan sering disajikan dengan roti dan mustard. Cocok disantap bersama bir tradisional Jerman, terutama saat musim semi atau festival rakyat.</p>
+      </div>
     </div>
-</div>
+  </div>
 
-<footer>
+  <footer>
     <div class="container">
-        <p>©2025 gutes Essen. All rights reserved.</p>
+      <p>©2025 gutes Essen. All rights reserved.</p>
     </div>
-</footer>
+  </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/menuschnitzel.js"></script>
 </body>
 </html>
