--- a/MenuSosis.html
+++ b/MenuSosis.html
@@ -3,88 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Menu Sosis Jerman</title>
+  <title>Menu Wurst</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-        font-family: 'Montserrat', Arial, sans-serif;
-        background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
-        margin: 0;
-        padding: 0;
-    }
-    .navbar {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-    .nav-link, .navbar-brand {
-        color: #fff;
-        font-weight: 500;
-        letter-spacing: 1px;
-    }
-    .nav-link:hover {
-        background-color: rgba(255, 255, 255, 0.15);
-        border-radius: 5px;
-        transition: 0.3s;
-    }
-    .nav-item.dropdown:hover .dropdown-menu {
-        display: block;
-        margin-top: 0;
-    }
-    .dropdown-menu {
-        background-color: rgba(0, 0, 0, 0.5);
-        border: none;
-    }
-    .dropdown-item {
-        color: white;
-    }
-    .dropdown-item:hover {
-        background-color: rgba(255, 255, 255, 0.2);
-        color: white;
-    }
-    .sosis-section {
-        padding: 60px 20px;
-    }
-    .sosis-card {
-        border-radius: 12px;
-        box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-        margin-top: 40px;
-        margin-bottom: 80px;
-        overflow: hidden;
-    }
-    .sosis-card img {
-        height: 400px;
-        object-fit: cover;
-        width: 100%;
-    }
-    .sosis-image {
-        scroll-margin-top: 100px;
-    }
-    .sosis-content {
-        padding: 30px;
-    }
-    h2 {
-        margin-bottom: 30px;
-        font-weight: bold;
-        text-align: center;
-    }
-    footer {
-        background-color: black;
-        color: white;
-        padding: 20px 0;
-        text-align: center;
-    }
-    @media (min-width: 768px) {
-        .sosis-row {
-          display: flex;
-          align-items: center;
-        }
-        .sosis-row:nth-child(even) .sosis-image {
-          order: 2;
-        }
-    }
-  </style>
+  <link rel="stylesheet" href="css/menusosis.css">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
     <div class="container-fluid px-4">
         <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
@@ -113,7 +36,7 @@
 <div class="container sosis-section">
     <h2>Menu Sosis Terkenal di Jerman</h2>
 
-    <div class="sosis-card sosis-row">
+    <div class="sosis-card sosis-row fade-in">
         <div class="col-md-6 sosis-image" id="bratwurst">
             <img src="img/bratwurst.jpg" alt="Bratwurst">
         </div>
@@ -123,7 +46,7 @@
         </div>
     </div>
 
-    <div class="sosis-card sosis-row">
+    <div class="sosis-card sosis-row fade-in">
         <div class="col-md-6 sosis-image" id="currywurst">
             <img src="img/currywurst.jpg" alt="Currywurst">
         </div>
@@ -133,7 +56,7 @@
         </div>
     </div>
 
-    <div class="sosis-card sosis-row">
+    <div class="sosis-card sosis-row fade-in">
         <div class="col-md-6 sosis-image" id="weisswurst">
             <img src="img/weisswurst.jpg" alt="Weisswurst">
         </div>
@@ -143,7 +66,7 @@
         </div>
     </div>
 
-    <div class="sosis-card sosis-row">
+    <div class="sosis-card sosis-row fade-in">
         <div class="col-md-6 sosis-image" id="bockwurst">
             <img src="img/bockwurst.jpg" alt="Bockwurst">
         </div>
@@ -161,5 +84,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/menusosis.js"></script>
 </body>
 </html>
