--- a/Sosis.html
+++ b/Sosis.html
@@ -3,265 +3,88 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sosis Jerman</title>
+  <title>Wurst</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    body {
-        font-family: 'Montserrat', Arial, sans-serif;
-        background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
-        margin: 0;
-        padding: 0;
-    }
-    .navbar {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-    .nav-link, .navbar-brand {
-        color: #fff;
-        font-weight: 500;
-        letter-spacing: 1px;
-    }
-    .nav-link:hover {
-        background-color: rgba(255, 255, 255, 0.15);
-        border-radius: 5px;
-        transition: 0.3s;
-    }
-    .nav-item.dropdown:hover .dropdown-menu {
-        display: block;
-        margin-top: 0;
-    }
-    .dropdown-menu {
-        display: none;
-        transition: all 0.3s ease-in-out;
-        background-color: rgba(0, 0, 0, 0.5);
-        border: none;
-    }
-    .dropdown-item {
-        color: white;
-    }
-    .dropdown-item:hover {
-        background-color: rgba(255, 255, 255, 0.2);
-        color: white;
-    }
-    .hero-image {
-        width: 100%;
-        max-height: 400px;
-        object-fit: cover;
-        filter: brightness(0.85);
-        box-shadow: 0 4px 24px rgba(0,0,0,0.08);
-    }
-    .content {
-        padding: 2rem 0;
-    }
-    .section-title {
-        font-size: 2.3rem;
-        font-weight: 700;
-        color: #2c3e50;
-        margin-bottom: 1.2rem;
-        text-align: center;
-        letter-spacing: 2px;
-    }
-    .schnitzel-list li {
-        margin-bottom: 0.8rem;
-        font-size: 1.13rem;
-    }
-    .fun-fact {
-        background: #fffbe7;
-        padding: 18px 20px;
-        border-radius: 10px;
-        font-style: italic;
-        margin: 2rem 0;
-        font-size: 1.1rem;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.03);
-    }
-    .img-sosis {
-        width: 100%;
-        max-width: 600px;
-        height: auto;
-        display: block;
-        margin: 35px auto 10px auto;
-        border-radius: 15px;
-        box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-        transition: transform 0.3s;
-    }
-    .img-sosis:hover {
-        transform: scale(1.04);
-    }
-    .gallery-title {
-        font-weight: 600;
-        color: #34495e;
-        margin-top: 2.5rem;
-        margin-bottom: 1rem;
-        text-align: center;
-    }
-    .gallery {
-        display: flex;
-        gap: 18px;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin-bottom: 2.5rem;
-    }
-    .gallery-item {
-        position: relative;
-        overflow: hidden;
-        border-radius: 10px;
-    }
-    .gallery-item img {
-        width: 170px;
-        height: 120px;
-        object-fit: cover;
-        border-radius: 10px;
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .gallery-item:hover img {
-        transform: scale(1.07);
-        box-shadow: 0 4px 18px rgba(0,0,0,0.15);
-    }
-    .btn-below {
-        display: block;
-        margin-top: 8px;
-        text-align: center;
-        background: rgba(0, 0, 0, 0.6);
-        color: white;
-        padding: 6px 12px;
-        border-radius: 6px;
-        font-size: 0.9rem;
-        font-weight: 500;
-        text-decoration: none;
-        position: absolute;
-        left: 50%;
-        bottom: 12px;
-        transform: translateX(-50%);
-        width: 80%;
-    }
-    .btn-below:hover {
-        background: rgba(0, 0, 0, 0.8);
-    }
-    .btn-outline-warning.btn-below:hover,
-    .btn-outline-warning.btn-below:focus {
-        background-color: #ffc107;
-        color: #fff;
-        border-color: #ffc107;
-        text-decoration: none;
-    }
-    .tips-box {
-        background: #e3f7f7;
-        padding: 18px 20px;
-        border-radius: 10px;
-        margin-bottom: 2rem;
-        font-size: 1.07rem;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.03);
-    }
-    .footer {
-        background-color: #222;
-        color: white;
-        text-align: center;
-        padding: 22px 10px 16px 10px;
-        position: relative;
-        margin-top: 2rem;
-        font-size: 1rem;
-    }
-    .back-to-top {
-        position: absolute;
-        right: 18px;
-        top: 18px;
-        font-weight: 600;
-    }
-    .back-to-top:hover {
-        color: #fff;
-        text-decoration: underline;
-    }
-    .navbar-brand {
-        color: rgb(0, 140, 255);
-    }
-  </style>
+  <link rel="stylesheet" href="css/sosis.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
-        <div class="container-fluid px-4">
-            <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
-                        <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
-                        <li><a class="dropdown-item" href="brot.html">Brot</a></li>
-                    </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
-                    <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <img src="img/bgsosis.jpg" alt="sosis Jerman" class="hero-image w-100">
-
-    <div class="content container">
-        <h1 class="section-title">Sosis Terkenal di Jerman</h1>
-        <p class="text-center mb-4">
-            Sosis adalah salah satu ikon kuliner Jerman yang mendunia. Negara ini memiliki lebih dari <b>1.500 jenis sosis</b> dengan rasa, bentuk, dan cara penyajian yang unik di setiap daerah.<br>Berikut beberapa sosis paling populer:
-        </p>
-        <ul class="sosis-list">
-            <li><strong>Bratwurst</strong> - Sosis panggang khas Nürnberg, gurih dan juicy.</li>
-            <li><strong>Currywurst</strong> - Street food favorit, disajikan dengan saus kari tomat pedas.</li>
-            <li><strong>Weisswurst</strong> - Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</li>
-            <li><strong>Bockwurst</strong> - Sosis rebus yang lembut, sering disantap bersama roti dan bir.</li>
+  <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
+    <div class="container-fluid px-4">
+      <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
+              <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
+              <li><a class="dropdown-item" href="brot.html">Brot</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
+          <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         </ul>
+      </div>
+    </div>
+  </nav>
+
+  <img src="img/BgSosis.jpg" alt="Sosis Jerman" class="hero-image w-100">
+
+  <div class="content container">
+    <h1 class="section-title">Sosis Terkenal di Jerman</h1>
+    <p class="text-center mb-4">
+      Sosis adalah salah satu ikon kuliner Jerman yang mendunia. Negara ini memiliki lebih dari <b>1.500 jenis sosis</b> dengan rasa, bentuk, dan cara penyajian yang unik di setiap daerah.<br>Berikut beberapa sosis paling populer:
+    </p>
+    <ul class="sosis-list">
+      <li><strong>Bratwurst</strong> - Sosis panggang khas Nürnberg, gurih dan juicy.</li>
+      <li><strong>Currywurst</strong> - Street food favorit, disajikan dengan saus kari tomat pedas.</li>
+      <li><strong>Weisswurst</strong> - Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</li>
+      <li><strong>Bockwurst</strong> - Sosis rebus yang lembut, sering disantap bersama roti dan bir.</li>
+    </ul>
     
-        <div class="fun-fact">
-            <b>Fun Fact:</b> Orang Jerman rata-rata mengonsumsi lebih dari <b>60 kg sosis per tahun</b>. Bahkan, di Berlin ada museum khusus Currywurst!
-        </div>
-
-        <img src="img/bgsosis1.webp" alt="Currywurst" class="img-sosis">
-
-        <h2 class="gallery-title">Galeri Sosis Jerman</h2>
-        <div class="gallery">
-            <div class="gallery-item">
-                <img src="img/Bratwurst.jpg" alt="Bratwurst">
-                <a href="menusosis.html#bratwurst" class="btn btn-outline-warning btn-below">Explore</a>
-            </div>
-            <div class="gallery-item">
-                <img src="img/Currywurst.jpg" alt="Currywurst.jpg">
-                <a href="menusosis.html#currywurst" class="btn btn-outline-warning btn-below">Explore</a>
-            </div>
-            <div class="gallery-item">
-                <img src="img/weisswurst.jpg" alt="weisswurst">
-                <a href="menusosis.html#weisswurst" class="btn btn-outline-warning btn-below">Explore</a>
-            </div>
-            <div class="gallery-item">
-                <img src="img/Bockwurst.jpg" alt="bockwrust">
-                <a href="menusosis.html#bockwurst" class="btn btn-outline-warning btn-below">Explore</a>
-            </div>
-        </div>
-
-        <div class="tips-box">
-            <b>Tips Penyajian:</b> Sosis Jerman paling nikmat disantap dengan pretzel, sauerkraut (kubis asam), dan mustard. Untuk pengalaman otentik, coba padukan dengan bir Jerman favorit!
-        </div>
-
-        <p class="text-center">
-            Banyak wisatawan mencicipi berbagai jenis sosis saat berkunjung ke Jerman, terutama saat festival makanan seperti <b>Oktoberfest</b>. Nikmati kelezatan sosis langsung dari negara asalnya!
-        </p>
+    <div class="fun-fact">
+      <b>Fun Fact:</b> Orang Jerman rata-rata mengonsumsi lebih dari <b>60 kg sosis per tahun</b>. Bahkan, di Berlin ada museum khusus Currywurst!
     </div>
 
-    <div class="footer">
-        <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
+    <img src="img/BgSosis1.webp" alt="Currywurst" class="img-sosis">
+
+    <h2 class="gallery-title">Galeri Sosis Jerman</h2>
+    <div class="gallery">
+      <div class="gallery-item">
+        <img src="img/Bratwurst.jpg" alt="Bratwurst">
+        <a href="#" class="btn btn-outline-warning btn-below" data-target="MenuSosis.html#bratwurst">Explore</a>
+      </div>
+      <div class="gallery-item">
+        <img src="img/Currywurst.jpg" alt="Currywurst">
+        <a href="#" class="btn btn-outline-warning btn-below" data-target="MenuSosis.html#currywurst">Explore</a>
+      </div>
+      <div class="gallery-item">
+        <img src="img/weisswurst.jpg" alt="weisswurst">
+        <a href="#" class="btn btn-outline-warning btn-below" data-target="MenuSosis.html#weisswurst">Explore</a>
+      </div>
+      <div class="gallery-item">
+        <img src="img/Bockwurst.jpg" alt="bockwurst">
+        <a href="#" class="btn btn-outline-warning btn-below" data-target="MenuSosis.html#bockwurst">Explore</a>
+      </div>
     </div>
-    <script>
-        document.querySelectorAll('.gallery-item').forEach(function(item) {
-            item.addEventListener('click', function() {
-                item.style.boxShadow = '0 0 0 4px #ffc107, 0 4px 18px rgba(0,0,0,0.15)';
-                setTimeout(function() {
-                    item.style.boxShadow = '';
-                }, 500);
-            });
-        });
-    </script>
-</body>
+
+    <div class="tips-box">
+      <b>Tips Penyajian:</b> Sosis Jerman paling nikmat disantap dengan pretzel, sauerkraut (kubis asam), dan mustard. Untuk pengalaman otentik, coba padukan dengan bir Jerman favorit!
+    </div>
+
+    <p class="text-center">
+      Banyak wisatawan mencicipi berbagai jenis sosis saat berkunjung ke Jerman, terutama saat festival makanan seperti <b>Oktoberfest</b>. Nikmati kelezatan sosis langsung dari negara asalnya!
+    </p>
+  </div>
+
+  <div class="footer">
+    <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
+  </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/sosis.js"></script>
 </html>
