--- a/about.html
+++ b/about.html
@@ -5,146 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About Us</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <style>
-    body {
-      font-family: 'Montserrat', Arial, sans-serif;
-      background: #fffefa;
-      margin: 0;
-    }
-
-    .navbar {
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-
-    .navbar-brand {
-      color: rgb(0, 140, 255);
-      font-weight: bold;
-    }
-
-    .nav-link, .navbar-brand {
-      color: #fff;
-      font-weight: 500;
-      letter-spacing: 1px;
-    }
-
-    .nav-link:hover {
-      background-color: rgba(255, 255, 255, 0.15);
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-
-    .hero {
-      background: url('img/hero-sosis.jpg') no-repeat center center/cover;
-      height: 320px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: bold;
-    }
-
-    .about-section {
-      padding: 60px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    .about-section h2 {
-      font-weight: 700;
-      margin-bottom: 20px;
-      color: #2c3e50;
-    }
-
-    .about-section p {
-      font-size: 1.1rem;
-      line-height: 1.8;
-      color: #333;
-      margin-bottom: 20px;
-      text-align: justify;
-    }
-
-    .values {
-      background: #f2f2f2;
-      padding: 40px 20px;
-    }
-
-    .values h3 {
-      text-align: center;
-      margin-bottom: 30px;
-      color: #2c3e50;
-    }
-
-    .values-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      gap: 20px;
-    }
-
-    .value-item {
-      flex: 1 1 250px;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.08);
-    }
-
-    .value-item h4 {
-      margin-bottom: 10px;
-      font-weight: 600;
-    }
-
-    .footer {
-      background-color: #000;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 1rem;
-      margin-top: 4rem;
-    }
-
-    .back-to-top {
-      display: inline-block;
-      margin-top: 8px;
-      color: #ccc;
-      font-size: 0.9rem;
-    }
-
-    .back-to-top:hover {
-      color: #fff;
-    }
-
-    .nav-item.dropdown:hover .dropdown-menu {
-      display: block;
-      margin-top: 0;
-    }
-
-    .dropdown-menu {
-      display: none;
-      transition: all 0.3s ease-in-out;
-      background-color: rgba(0, 0, 0, 0.5);
-      border: none;
-    }
-
-    .dropdown-item {
-      color: white;
-    }
-
-    .dropdown-item:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
-
   <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
     <div class="container-fluid px-4 text-warning">
       <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
@@ -177,38 +40,52 @@
   <section class="about-section">
     <h2>Cerita Kami</h2>
     <p>
-      Kami memulai <strong>gutes Essen</strong> dengan satu tujuan sederhana: membawa kelezatan sosis khas Jerman ke hadapan Anda. Dari jalanan Berlin yang penuh semangat hingga dapur tradisional Bavaria, kami terinspirasi oleh cita rasa yang kaya sejarah dan budaya.
+      Kami memulai <strong>gutes Essen</strong> dengan satu tujuan sederhana: membawa kelezatan sosis dan minuman tradisional khas Jerman ke hadapan Anda. Dari jalanan Berlin yang penuh semangat hingga dapur tradisional Bavaria, kami terinspirasi oleh cita rasa yang kaya sejarah dan budaya.
     </p>
     <p>
-      Melalui platform ini, kami ingin lebih dari sekadar menyajikan daftar menu. Kami ingin berbagi kisah, fakta unik, dan semangat dari setiap jenis sosis yang kami tampilkan. Setiap halaman adalah hasil eksplorasi, penelitian, dan rasa cinta terhadap kuliner khas Jerman.
+      Melalui platform ini, kami ingin lebih dari sekadar menyajikan daftar menu. Kami ingin berbagi kisah, fakta unik, dan semangat dari setiap jenis sosis atau minuman yang kami tampilkan. Setiap halaman adalah hasil eksplorasi, penelitian, dan rasa cinta terhadap kuliner khas Jerman.
     </p>
     <p>
-      Bagi kami, makanan adalah jembatan yang menghubungkan budaya dan manusia. Kami harap Anda dapat merasakannya di setiap klik dan gigitan virtual Anda di situs ini.
+      Bagi kami, makanan dan minuman adalah jembatan yang menghubungkan budaya dan manusia. Kami harap Anda dapat merasakannya di setiap klik dan gigitan virtual Anda di situs ini.
     </p>
   </section>
 
-  <section class="values">
-    <h3>Nilai-Nilai Kami</h3>
-    <div class="values-list">
-      <div class="value-item">
-        <h4>Otentik</h4>
-        <p>Setiap cerita dan menu bersumber dari referensi budaya asli Jerman.</p>
-      </div>
-      <div class="value-item">
-        <h4>Informasi & Edukasi</h4>
-        <p>Kami ingin Anda mengenal lebih dari sekadar rasa — tapi juga sejarahnya.</p>
-      </div>
-      <div class="value-item">
-        <h4>Visual & Pengalaman</h4>
-        <p>Gambar, layout, dan bahasa kami rancang agar pengalaman Anda menyenangkan.</p>
+<hr>
+
+<div class="text-center mb-4">
+  <button id="showFormBtn" class="btn btn-outline-warning">Beri Kritik & Saran</button>
+</div>
+
+<section id="contact" class="py-5 bg-light mb-5">
+  <div id="formSection" class="hidden-form">
+    <h2 class="text-center text-warning mb-4">Kritik & Saran</h2>
+    <p class="text-center text-muted mb-4">Kami menghargai masukan dari Anda. Silakan isi form di bawah ini.</p>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <form action="https://formspree.io/f/mgvyvdjp" method="POST">
+          <div class="mb-3">
+            <label for="name" class="form-label">Nama</label>
+            <input type="text" class="form-control" id="name" name="nama" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email Anda</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Pesan / Kritik / Saran</label>
+            <textarea class="form-control" id="message" rows="5" name="pesan" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-warning w-100">Kirim</button>
+        </form>
       </div>
     </div>
-  </section>
-
-  <div class="footer">
-    <p>© 2025 gutes Essen. All rights reserved.</p>
   </div>
+</section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<div class="footer">
+  <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/about.js"></script>
 </body>
 </html>
