--- a/menubrot.html
+++ b/menubrot.html
@@ -3,86 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Menu Roti Jerman</title>
+  <title>Menu Brot</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-        font-family: 'Montserrat', Arial, sans-serif;
-        background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
-        margin: 0;
-        padding: 0;
-    }
-    .navbar {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-    .nav-link, .navbar-brand {
-        color: #fff;
-        font-weight: 500;
-        letter-spacing: 1px;
-    }
-    .nav-link:hover {
-        background-color: rgba(255, 255, 255, 0.15);
-        border-radius: 5px;
-        transition: 0.3s;
-    }
-    .nav-item.dropdown:hover .dropdown-menu {
-        display: block;
-        margin-top: 0;
-    }
-    .dropdown-menu {
-        background-color: rgba(0, 0, 0, 0.5);
-        border: none;
-    }
-    .dropdown-item {
-        color: white;
-    }
-    .dropdown-item:hover {
-        background-color: rgba(255, 255, 255, 0.2);
-        color: white;
-    }
-    .brot-section {
-        padding: 60px 20px;
-    }
-    .brot-card {
-        background-color: #ffffff;
-        border-radius: 12px;
-        box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-        margin-top: 40px;
-        margin-bottom: 80px;
-        overflow: hidden;
-    }
-    .brot-card img {
-        height: 400px;
-        object-fit: cover;
-        width: 100%;
-    }
-    .brot-image {
-        scroll-margin-top: 100px;
-    }
-    .brot-content {
-        padding: 30px;
-    }
-    h2 {
-        margin-bottom: 30px;
-        font-weight: bold;
-        text-align: center;
-    }
-    footer {
-        background-color: #000;
-        color: white;
-        padding: 20px 0;
-        text-align: center;
-    }
-    @media (min-width: 768px) {
-        .brot-row {
-          display: flex;
-          align-items: center;
-        }
-        .brot-row:nth-child(even) .brot-image {
-          order: 2;
-        }
-    }
-  </style>
+  <link rel="stylesheet" href="css/menubrot.css">
 </head>
 <body>
 
@@ -114,7 +37,7 @@
 <div class="container brot-section">
     <h2>Menu Roti Khas Jerman</h2>
 
-    <div class="brot-card brot-row">
+    <div class="brot-card brot-row fade-in">
         <div class="col-md-6 brot-image" id="Pumpernickel">
             <img src="img/Pumpernickel.jpg" alt="Pumpernickel">
         </div>
@@ -124,7 +47,7 @@
         </div>
     </div>
 
-    <div class="brot-card brot-row">
+    <div class="brot-card brot-row fade-in">
         <div class="col-md-6 brot-image" id="Vollkornbrot">
             <img src="img/Vollkornbrot.webp" alt="Vollkornbrot">
         </div>
@@ -134,7 +57,7 @@
         </div>
     </div>
 
-    <div class="brot-card brot-row">
+    <div class="brot-card brot-row fade-in">
         <div class="col-md-6 brot-image" id="Roggenmischbrot">
             <img src="img/Roggenmischbrot.jpg" alt="Roggenmischbrot">
         </div>
@@ -144,7 +67,7 @@
         </div>
     </div>
 
-    <div class="brot-card brot-row">
+    <div class="brot-card brot-row fade-in">
         <div class="col-md-6 brot-image" id="Weissbrot">
             <img src="img/Weissbrot.jpg" alt="Weissbrot">
         </div>
@@ -162,5 +85,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/menubrot.js"></script>
 </body>
 </html>
